[package]
authors = ["Shawn Liu <shawn666.liu@hotmail.com>"]
description = "rust wrapper for CTP C++"
edition = "2021"
name = "myctp"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
encoding = "*"
memchr = "*"
simple-error = "*"
time = { version = "0.3", features = ["macros"] }

[build-dependencies]
bindgen = "*"
cc = "*"
# encoding = "*"
