[package]
authors = ["Shawn Liu <shawn666.liu@hotmail.com>"]
description = "rust wrapper for CTP C++"
edition = "2021"
name = "myctp"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
encoding = "*"
memchr = "*"

[build-dependencies]
bindgen = "^0.72.1"
cc = "*"
